Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z8.out
Z8.java:11:15: compiler.err.intf.annotation.members.cant.have.params
1 error
